# ass-istant

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Justfile  README.md  ass-istant.sample.toml  committed.toml  typos.toml
src/: chat_manager.rs  config.rs  event_logger.rs  impersonator.rs  main.rs  oauth.rs  platform.rs  utils.rs
src/platform/: discord.rs  mattermost.rs
src/utils/: rejections.txt  waitable_lock.rs
