[package]
name = "ass-istant"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.6"
chrono = { version = "0.4.42", features = ["serde"] }
config = "0.15.18"
dashmap = "6.1.0"
directories = "6.0.0"
futures = "0.3.31"
mattermost_api = { version = "0.8.2", features = ["rustls"] }
oauth2 = "5.0.0"
ollama-rs = { version = "0.3.3", features = ["rustls", "tokio"] }
pretty_assertions = { version = "1.4.1", features = ["unstable"] }
rand = "0.9.2"
rand_distr = "0.5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde-nested-json = "0.1.3"
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt"] }
tokio-util = { version = "0.7.17", features = ["rt"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = { version = "2.5.7", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
